[gd_scene load_steps=5 format=3 uid="uid://ca7m56xpyjn3v"]

[ext_resource type="Script" uid="uid://cshi1cp0u85p0" path="res://UI_Overlay/Scripts/place_objects.gd" id="1_8wpsf"]
[ext_resource type="Texture2D" uid="uid://8rkgrm0hw7h8" path="res://UI_Overlay/Sprites/Navigation/Screenshot__92_-removebg-preview.png" id="2_f0afy"]
[ext_resource type="Texture2D" uid="uid://0tn67am0hfy0" path="res://UI_Overlay/Sprites/Navigation/Y__4_-removebg-preview.png" id="3_tafk0"]
[ext_resource type="Texture2D" uid="uid://jkwua2p746x1" path="res://UI_Overlay/Sprites/Navigation/output-onlinepngtools (3).png" id="4_vx0wu"]

[node name="EditObject" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8wpsf")

[node name="Triggers_To_Rotate" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -167.0
offset_right = -73.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_f0afy")
expand_mode = 1

[node name="Label" type="Label" parent="Triggers_To_Rotate"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.523
anchor_top = 0.5
anchor_right = 0.523
anchor_bottom = 0.5
offset_left = 65.441
offset_top = -10.5
offset_right = 140.441
offset_bottom = 12.5
text = "To Rotate"

[node name="Move_Place" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78
anchor_top = 0.823
anchor_right = 0.78
anchor_bottom = 0.823
offset_left = -21.199982
offset_top = -31.040009
offset_right = 49.80002
offset_bottom = 39.95999
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_tafk0")
expand_mode = 1

[node name="Label" type="Label" parent="Move_Place"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.225
anchor_top = 0.5
anchor_right = 1.225
anchor_bottom = 0.5
offset_left = 0.025001526
offset_top = -14.5
offset_right = 69.025
offset_bottom = 8.5
text = "To Select"

[node name="Change_Colors" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Delete_Leave Wall" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -64.0
offset_right = -119.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_vx0wu")
expand_mode = 1

[node name="Label" type="Label" parent="Delete_Leave Wall"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.523
anchor_top = 0.5
anchor_right = 0.523
anchor_bottom = 0.5
offset_left = 41.9589
offset_top = -12.5
offset_right = 147.959
offset_bottom = 10.5
text = "To Leave Wall"
